# nostromo

./: .gitignore  .mcp.json  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
Shared/NostromoKit/: Package.swift
docs/: PLAN.md  bishop-oauth-plan.md  break-glass.md  kitty-keyboard-passthrough.md  mcp-phase1.md  mcp-phase2.md  mcp-phase3.md  mcp-phase4.md  perri-rl-fix-1.md  perri-rl-fix-2.md  perri-rl-fix-3.md  phase2-plan.md  phase3-plan.md  phase4-plan.md  phase5b-plan.md  phase5c-plan.md  teri-plan.md  transcript-pane-phase1.md  transcript-pane-phase2.md  transcript-pane-phase3.md  transcript-pane-phase4.md
docs/bugs/: 2026-05-31-daemon-sessions-run-at-filesystem-root.md
docs/bugs/resolved/: 2026-05-31-daemon-sessions-run-at-filesystem-root.md
docs/features/: 2026-05-31-nest-sub-agent-activity-in-repl-transcript.md
docs/ideas/: 2026-05-31-nostromo-native-iphone-ipad-client.md
docs/mcp/: README.md  agent-layout-sequence.md  agent-layout.md  example-claude-mcp.json  migration.md  panes.md  tools.md
docs/plans/: daemon-mother-readapi.md  mac-status-bar-item.md  mcp-network-transport.md  persistent-bidirectional-session-host.md  platform-evolution-sequencing.md
docs/prds/: daemon-pairing-flow.md  mac-native-shell.md  persistent-bidirectional-session-host.md  push-relay.md
docs/visions/: ipad.md  iphone.md  mac-native.md
iOS/Nostromo/: Info.plist  NostromoApp.swift
iOS/Nostromo.xcodeproj/: project.pbxproj
iOS/Nostromo/Views/: AskQuestionPrompt.swift  ConnectionSettingsView.swift  DaemonDiscoveryView.swift  DynamicFocusView.swift  FocusListView.swift  FredView.swift  MotherJobDetailView.swift  MotherQueueView.swift  PerriView.swift  TeriView.swift  TranscriptView.swift
macOS/Nostromo/: AppDelegate.swift  Info.plist  NostromoWindow.swift
macOS/Nostromo.xcodeproj/: project.pbxproj
macOS/Nostromo/Data/: AppStore.swift  ChatModels.swift  ChatSession.swift  FileWatchers.swift  FocusStore.swift  Models.swift  MotherBrokerClient.swift  NostromodClient.swift
macOS/Nostromo/UI/: CreateFocusSheet.swift  DiffColoring.swift  MainLayout.swift  PaceBarsView.swift  SessionHealthStatusView.swift  SidenavGrouping.swift  StatusBarView.swift  TabBarView.swift  Theme.swift  ToastBannerView.swift
macOS/NostromoTests/: MotherBrokerClientTests.swift  PerriModelTests.swift  PhaseRibbonTests.swift  SessionHealthTests.swift  SidenavGroupingTests.swift
macOS/icon/: build-icon.sh
macOS/icon/AppIcon.appiconset/: Contents.json
src/: agent_bus.rs  app.rs  config.rs  event.rs  lib.rs  main.rs  mdns.rs  mother.rs  perri_cli.rs  sessions.rs
src/data/: break_glass.rs  context_usage.rs  daemon_bridge.rs  dirty_file.rs  fred_calendar.rs  fred_calendar_native.rs  fred_mailbox.rs  fred_mailbox_native.rs  github_client.rs  graph_client.rs  mod.rs  mother_broker_source.rs  mother_poll.rs  perri_pr.rs  perri_pr_native.rs  perri_queue.rs  perri_queue_native.rs  perri_suppress.rs  posture_events_watcher.rs  rate_limits.rs  rate_limits_watcher.rs  relay_client.rs  right_panel_source.rs  teri_todos.rs
src/ipc/: client.rs  codec.rs  mod.rs  pane_registry.rs  protocol.rs  pty_manager.rs  scrollback.rs  server.rs  session_manager.rs  stream_json.rs
src/ipc/testdata/: scrollback_session.jsonl  stream_multi_turn.jsonl  stream_replay_blocked.jsonl  stream_simple.jsonl  stream_tool_success.jsonl
src/layout/: mod.rs  persist.rs  tree.rs
src/mcp/: command.rs  mod.rs  server.rs  socket.rs  state.rs
src/mcp/tools/: create_focus.rs  create_pane.rs  fred.rs  get_self.rs  get_view_state.rs  list_views.rs  mod.rs  mother.rs  mother_mutators.rs  nostromo_meta.rs  (+7 more)
src/mother/: broker_client.rs  mod.rs  protocol.rs
src/pty/: altscreen.rs  client.rs  host.rs  keys.rs  kitty.rs  mod.rs  widget.rs
src/transcript/: integration.rs  mod.rs  path.rs  reader.rs  record.rs  snapshot.rs
src/ui/: chrome.rs  debug_overlay.rs  drag.rs  mod.rs  pane_ratios.rs  status_bar.rs  theme.rs
src/views/: agent_generic.rs  await_modal.rs  break_glass_modal.rs  command_palette.rs  fred.rs  fred_calendar_image.rs  mod.rs  mother.rs  pace_bars_image.rs  perri.rs  teri.rs
tests/: await_modal.rs  calendar_timeline.rs  ci_failure_cache.rs  etag_caching.rs  github_client.rs  graph_client.rs  ipc_codec.rs  ipc_tcp_transport.rs  mcp_daemon_panes.rs  mcp_get_self.rs  mcp_introspection.rs  mcp_mutations.rs  mcp_notify.rs  mcp_perri_load_pr_integration.rs  mcp_status_segment.rs  mother_broker_protocol.rs  mother_list_json_parse.rs  mother_status_parse.rs  pace_bars_image.rs  palette_fuzzy.rs  perri_ci_state.rs  pty_kitty_integration.rs  right_panel_smoke.rs  scrollback.rs  session_host_integration.rs  snapshot_fred.rs  snapshot_perri.rs  snapshot_pty.rs  transcript_integration.rs  transcript_interaction.rs  transcript_jump_to_latest.rs  transcript_markdown.rs  transcript_parse.rs  transcript_tail.rs  views_transcript_smoke.rs
tests/fixtures/: mcp_fred_mailbox.json  mcp_perri_queue.json  mother_list.json
tests/snapshots/: snapshot_fred__fred_layout_first_10_rows.snap  snapshot_perri__perri_layout_first_10_rows.snap  snapshot_perri__perri_layout_first_10_rows.snap.new  snapshot_pty__pty_ansi_colours.snap  snapshot_pty__pty_cursor_position.snap  snapshot_pty__pty_empty_screen.snap  snapshot_pty__pty_plain_text.snap
(+57 files in other folders)
