[package]
name = "nostromo"
version = "0.1.0"
edition = "2021"
description = "A Ratatui-based AI agent IDE — unified dashboard for fred, perri, claudia, cody, and mother"
authors = ["thehammer"]
license = "MIT"

[lib]
name = "nostromo"
path = "src/lib.rs"

[[bin]]
name = "nostromo"
path = "src/main.rs"

[[bin]]
name = "nostromd"
path = "src/bin/nostromd.rs"

[[bin]]
name = "nostromo-mcp-bridge"
path = "src/bin/nostromo_mcp_bridge.rs"

[dependencies]
# TUI
ratatui = "0.30"
ratatui-image = { version = "11", default-features = false, features = ["crossterm", "image-defaults"] }
crossterm = "0.28"

# Image rendering (calendar pixel renderer)
image = "0.25"
tiny-skia = "0.11"
fontdue = "0.9"

# Embedded PTY
portable-pty = "0.8"
vt100 = "0.16"
bytes = "1"

# Syntax highlighting
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

# Markdown parsing (transcript pane phase 2)
pulldown-cmark = { version = "0.12", default-features = false }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "sync", "signal", "io-util", "net", "fs"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# mDNS / Bonjour service discovery
mdns-sd = "0.11"
hostname = "0.4"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# Utilities
directories = "5"
dirs-next = "2"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

# SQLite (Teri todos)
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP + OAuth2 (Phase 4 native clients)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
oauth2 = "4"
tokio-util = { version = "0.7", features = ["io"] }

# GitHub API (Phase 4)
octocrab = "0.41"

# github-relay WebSocket subscriber
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
serde_yaml = "0.9"
url = "2"
unicode-width = "0.1"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
wiremock = "0.6"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
